<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SEC Data Check</string>
    <string name="app_package_name" translatable="false">com.sec.datacheck.fileprovider</string>
    <string name="home">Home</string>
    <string name="loading_location">Loading Location…</string>
    <string name="map_not_loaded">Map Not Loaded</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="connection_error">Connection error, Try again</string>
    <string name="no_internet">No internet connection</string>
    <string name="wrong_username_or_password">Wrong user name or password</string>
    <string name="action_go_offline">Work in offline mode</string>
    <string name="action_go_online">Work in online mode</string>
    <string name="action_edit">Edit</string>
    <string name="out_side_extent">You Out Side extent</string>
    <string name="undo">Undo</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="sync">Sync</string>
    <string name="show_templates">Show templates</string>
    <string name="delete_current_offline_map">Do you want to delete your previously downloaded map?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notes">Notes:</string>
    <string name="BaseMap" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_AllMap/MapServer</string>
    <string name="BaseMap2" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/TEST/TEST_EKC/MapServer</string>
    <string name="gcs_feature_server" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/EKC/EKC_Collector/FeatureServer</string>
    <string name="gcs_feature_server_test" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer</string>
    <string name="point_feature_layer_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/0</string>
    <string name="line_feature_layer_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/1</string>
    <string name="polygon_feature_layer_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/2</string>
    <string name="index_services" translatable="false">http://196.218.181.250:6080/arcgis/rest/services/GCS_3857/FeatureServer/3</string>
    <string name="FCL_DISTRIBUTIONBOX" translatable="false">http://192.168.1.13:6080/arcgis/rest/services/TEST/TEST_EKC/FeatureServer/0</string>
    <string name="FCL_POLES" translatable="false">http://192.168.1.13:6080/arcgis/rest/services/TEST/TEST_EKC/FeatureServer/1</string>
    <string name="FCL_RMU" translatable="false">http://192.168.1.13:6080/arcgis/rest/services/TEST/TEST_EKC/FeatureServer/2</string>
    <string name="FCL_Substation" translatable="false">http://192.168.1.13:6080/arcgis/rest/services/TEST/TEST_EKC/FeatureServer/3</string>
    <string name="OCL_METER" translatable="false">http://192.168.1.13:6080/arcgis/rest/services/TEST/TEST_EKC/FeatureServer/4</string>
    <string name="Service_Point" translatable="false">http://192.168.1.13:6080/arcgis/rest/services/TEST/TEST_EKC/FeatureServer/5</string>
    <string name="Surveyor" translatable="false">http://192.168.1.13:6080/arcgis/rest/services/TEST/TEST_EKC/FeatureServer/6</string>
    <string name="auto_recloser" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/0</string>
    <string name="fuse_cut_out" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/1</string>
    <string name="link_box" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/2</string>
    <string name="load_Breaker_Switch_LBS_33_13_KV" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/3</string>
    <string name="l_V_distribution_Box" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/4</string>
    <string name="l_V_distribution_Panel" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/5</string>
    <string name="MCCB_LVP_Circuits_Record" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/6</string>
    <string name="Meter" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/7</string>
    <string name="Mini_pillar" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/8</string>
    <string name="MV_Metering" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/9</string>
    <string name="OH_Lines" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/10</string>
    <string name="Pole" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/11</string>
    <string name="Sectionlizer" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/12</string>
    <string name="stations" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/13</string>
    <string name="substations" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/14</string>
    <string name="SVC_Static_VAR_Compensator" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/15</string>
    <string name="Switchgear" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/16</string>
    <string name="Transformer" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/17</string>
    <string name="Voltage_regulator" translatable="false">http://5.9.13.170:6080/arcgis/rest/services/EKC/Check_Data/FeatureServer/18</string>
    <string name="GcsSatellite" translatable="false">http://54.187.60.111/arcgis/rest/services/GCS_Cahced/MapServer</string>
    <string name="MapServiceEnglishToken" translatable="false">dXIpr8oo9tCaCrniBW4dT_sAGlcX8I3tyOK5eNaGJAo.</string>
    <string name="MapServiceArabicToken" translatable="false">dXIpr8oo9tCaCrniBW4dT_sAGlcX8I3tyOK5eNaGJAo.</string>
    <string name="FeatureServiceToken" translatable="false">TMEE6lqp0mvBmoZkPeeLpb0TCLvOd6RIzXVr1oU5_JA.</string>
    <string name="GcsSatelliteToken" translatable="false">RxmJJAGcbuNb_T4lafPuguHIKAfrYVila_DhIkbE9mA.</string>
    <string name="FCL_DISTRIBUTIONBOX_layer_name" translatable="false">EKC_Collector.DBO.FCL_DISTRIBUTIONBOX</string>
    <string name="FCL_POLES_layer_name" translatable="false">EKC_Collector.DBO.FCL_POLES</string>
    <string name="FCL_RMU_layer_name" translatable="false">EKC_Collector.DBO.FCL_RMU</string>
    <string name="FCL_Substation_layer_name" translatable="false">EKC_Collector.DBO.FCL_Substation</string>
    <string name="OCL_METER_layer_name" translatable="false">EKC_Collector.DBO.OCL_METER</string>
    <string name="Service_Point_layer_name" translatable="false">EKC_Collector.DBO.Service_Point</string>
    <string name="point_feature_layer_name" translatable="false">GeoNames</string>
    <string name="line_feature_layer_name" translatable="false">NameExtendLine</string>
    <string name="polygon_feature_layer_name" translatable="false">NameExtendArea</string>
    <string name="working_area_feature_layer_services" translatable="false"> http://54.187.60.111/arcgis/rest/services/GCS_Collector_26_7_2017/FeatureServer/7</string>
    <string name="dialog_connection_failed_title"> Error downloading</string>
    <string name="connection_failed">Connection Failed, Please try again</string>
    <string name="action_add_new_feature_online">Add New Service</string>
    <string name="tap_on_map_to_add">Tap on Map to add</string>
    <string name="delete_feature">Delete Service</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="gps_not_enabled">GPS Not Enabled</string>
    <string name="enable_gps_now">Enable Now From Settings ?</string>
    <string name="settings">Settings</string>
    <string name="accept_permission">You Must accept permission</string>
    <string name="exit">Exit</string>
    <string name="exit_without_saving">Exit without saving ?</string>
    <string name="enter_required_fields_and_save">Enter required fields and Save"</string>
    <string name="try_again"> Try again</string>
    <string name="dialog_bookmark_title">Add New Bookmark</string>
    <string name="dialog_bookmark_add">Add</string>
    <string name="dialog_bookmark_cancel">Cancel</string>
    <string name="no_title">Enter Title</string>
    <string name="bookmark_added">Bookmark Added Successfully</string>
    <string name="bookmark_not_added">Can not add bookmark</string>
    <string name="no_bookmarks">No bookmarks found</string>
    <string name="dialog_show_bookmarks_title">My Bookmarks</string>
    <string name="menu_add_bookmark">Add bookmark</string>
    <string name="menu_show_bookmarks">Show bookmarks</string>
    <string name="title">Title</string>
    <string name="download_another_version">Offline version found, Download another version or load the predownloaded</string>
    <string name="no_offline_version">You do not have Offline Version</string>
    <string name="preview">Load</string>
    <string name="download">Download</string>
    <string name="no_service_found">No service found in this area</string>
    <string name="attachment_offline_error">Cannot add attachment,Please Download Another Local Version</string>
    <string name="sync_completed">Sync Completed</string>
    <string name="error_in_adding_feature">Error in adding service</string>
    <string name="download_map_again">Please, Re-download the map again</string>
    <string name="sync_before_online">If you made any work on offline map you must Sync with Server.\n Sync Now ?</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="camera">Open Camera</string>
    <string name="gallery">Open Gallery</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_video">Record Video</string>
    <string name="delete">Delete</string>
    <string name="change_location">Change Location</string>
    <string name="attachments">Attachments</string>
    <string name="attributes">Attributes</string>
    <string name="search">Search By City</string>
    <string name="draw_area_to_download">Draw Area To Download</string>
    <string name="download_current_map_area">Download Current Map Area</string>
    <string name="load_previous_downloaded_map">Load Previous Downloaded Map</string>
    <string name="logout">Logout</string>
    <string name="delete_attachment">Delete Attachment</string>
    <string name="no_attachment">No Attachments</string>
    <string name="menu_go_offline_mode">Go offline mode</string>
    <string name="menu_go_online_mode">Go online mode</string>
    <string name="type" translatable="false">النوع</string>
    <string name="object_id" translatable="false">Object ID:</string>
    <string name="dummy_objectID" translatable="false">123564</string>
    <string name="overflow">overflow</string>
    <string name="code_lbl">الكود</string>
    <string name="device_no_lbl">رقم الجهاز</string>
    <string name="notes_hint">Notes</string>
    <string name="Size">Size</string>
    <string name="martial_type">Martial_Type</string>
    <string name="voltage">Voltage</string>
    <string name="electricity_status">Electricity_Status</string>
    <string name="no_of_lines">No_of_lines</string>
</resources>