<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_attach"
        android:icon="@drawable/ic_attach_file_white_24dp"
        android:title="@string/add_attachment"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_camera"
                android:icon="@drawable/ic_photo_camera_black_24dp"
                android:title="@string/camera" />

            <item
                android:id="@+id/menu_gallery"
                android:icon="@drawable/ic_perm_media_black_24dp"
                android:title="@string/gallery" />

            <item
                android:id="@+id/menu_audio"
                android:icon="@drawable/ic_record_audio"
                android:visible="false"
                android:title="@string/record_audio" />

            <item
                android:id="@+id/menu_video"
                android:icon="@drawable/ic_videocam_black_24dp"
                android:visible="false"
                android:title="@string/record_video" />
        </menu>

    </item>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="never" />


</menu>