<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_load_previous_offline"
        android:icon="@drawable/ic_layers_white_24dp"
        android:title="@string/load_previous_downloaded_map"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_go_offline"
        android:icon="@drawable/ic_action_offline"
        android:title="@string/action_go_offline"
        android:visible="true"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/item_draw_polygon"
                android:icon="@drawable/ic_create_black_24dp"
                android:title="@string/draw_area_to_download"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_current_extent"
                android:icon="@drawable/ic_filter_b_and_w_black_24dp"
                android:title="@string/download_current_map_area"
                android:visible="true"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/item_load_previous"
                android:icon="@drawable/ic_layers_black_24dp"
                android:title="@string/load_previous_downloaded_map"
                android:visible="true"
                app:showAsAction="ifRoom" />

        </menu>
    </item>

    <item
        android:id="@+id/item_go_online"
        android:icon="@drawable/ic_action_online"
        android:title="@string/action_go_online"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_sync"
        android:icon="@drawable/ic_action_sync"
        android:title="@string/sync"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/overflow"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/overflow"
        android:visible="true"
        app:showAsAction="ifRoom">

        <menu
            android:visible="true"
            >
            <item
                android:id="@+id/item_go_offline_mode"
                android:icon="@drawable/ic_layers_black_24dp"
                android:title="@string/menu_go_offline_mode"
                android:visible="true"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/item_go_online_mode"
                android:icon="@drawable/ic_layers_black_24dp"
                android:title="@string/menu_go_online_mode"
                android:visible="false"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/item_Add_Bookmark"
                android:icon="@drawable/ic_stars_black_24dp"
                android:title="@string/menu_add_bookmark"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/item_Show_Bookmarks"
                android:icon="@drawable/ic_bookmark_black_24dp"
                android:title="@string/menu_show_bookmarks"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/item_Logout"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:title="@string/logout"
                android:visible="true"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>