<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".collector.view.fragments.EditFeatureFragment">

    <ScrollView
        android:id="@+id/scrollAttributes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f4faff"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#68a6d2"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:text="@string/attributes"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edittext_border_background"
                    android:gravity="center"
                    android:prompt="@string/type"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:targetApi="n" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/type_spinner"
                    app:layout_constraintStart_toStartOf="@+id/type_spinner"
                    app:layout_constraintTop_toTopOf="@+id/type_spinner" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_edittext_border_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/object_id_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/object_id" />

                <TextView
                    android:id="@+id/object_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dummy_objectID" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_edittext_border_background">

                <EditText
                    android:id="@+id/mCodeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/code_lbl"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_edittext_border_background">

                <EditText
                    android:id="@+id/device_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/device_no_lbl"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--        <EditText-->
            <!--            android:id="@+id/generated_code"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:hint="الكود المصطنع"-->
            <!--            android:inputType="number"/>-->

            <LinearLayout
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/tvAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#68a6d2"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:text="@string/attachments"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/take_picture_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                tools:targetApi="lollipop" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/offline_attachments_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>