<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f4faff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_24sdp">

            <TextView
                android:id="@+id/oh_line_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/Size"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/oh_line_size_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/custom_edittext_border_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_size" />

            <TextView
                android:id="@+id/oh_line_frag_martial_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/martial_type"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_size_sp" />

            <Spinner
                android:id="@+id/oh_line_frag_martial_type_sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edittext_border_background"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_martial_type" />

            <TextView
                android:id="@+id/oh_line_frag_voltage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/voltage"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_martial_type_sp" />

            <Spinner
                android:id="@+id/oh_line_frag_voltage_sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edittext_border_background"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_voltage" />

            <TextView
                android:id="@+id/oh_line_frag_electricity_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/electricity_status"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_voltage_sp" />

            <Spinner
                android:id="@+id/oh_line_frag_electricity_status_sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_border_background"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_electricity_status" />

            <TextView
                android:id="@+id/oh_line_frag_no_of_lines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/no_of_lines"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_electricity_status_sp" />

            <Spinner
                    android:id="@+id/oh_line_frag_no_of_lines_sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edittext_border_background"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_no_of_lines" />


            <EditText
                android:id="@+id/oh_line_frag_notes_et"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edittext_border_background"
                android:gravity="start"
                android:hint="@string/notes_hint"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_no_of_lines_sp" />


            <Button
                android:id="@+id/oh_line_frag_save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/update_btn_background"
                android:elevation="4dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/oh_line_size"
                app:layout_constraintStart_toStartOf="@+id/oh_line_size"
                app:layout_constraintTop_toBottomOf="@+id/oh_line_frag_notes_et"
                tools:targetApi="lollipop" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>